# skytemple-ssb-emulator

./: .gitignore  Cargo.toml  MANIFEST.in  README.rst  build-manylinux.sh  dev-requirements.txt  mypy.ini  pyproject.toml  requirements.txt  setup.py
.cargo/: config.toml
.github/workflows/: build-test-publish.yml  linting-checking.yml
skytemple_ssb_emulator/: __init__.pyi
src/: alloc_table.rs  display_buffer.rs  eos_debug.rs  event_queue.rs  game_variable.rs  input.rs  language.rs  lib.rs  macros.rs  memory.rs  printf.rs  pycallbacks.rs  python_module.rs  script_runtime.rs  state.rs  stbytes.rs  system.rs
src/implementation/: desmume.rs  mod.rs
